--- a/process_df.ipynb
+++ b/process_df.ipynb
@@ -1007,17 +1007,151 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>labels</th>\n",
+       "      <th>count</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>trick</th>\n",
+       "      <th>event</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>B</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>gag</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>In</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>gag</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>L</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>gag</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>In</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>gag</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>N</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>gag</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  labels  count  subject  trick event\n",
+       "0      B      2        1      1   gag\n",
+       "1     In      1        1      1   gag\n",
+       "2      L      1        1      1   gag\n",
+       "0     In      1        1      2   gag\n",
+       "1      N      1        1      2   gag"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frames_trick=[]\n",
+    "\n",
+    "for S in df_gags.subject.unique():\n",
+    "    df_s=df_gags.loc[df_gags['subject']==S]\n",
+    "    for T in df_s.trick.unique():\n",
+    "        df_t = df_s.loc[df_s['trick']==T]\n",
+    "        df_count = df_t.groupby(['labels']).size().reset_index(name='count')\n",
+    "        df_count['subject']= S\n",
+    "        df_count['trick']= T\n",
+    "        df_count['event']='gag'\n",
+    "        frames_trick.append(df_count)\n",
+    "\n",
+    "\n",
+    "for S in df_climax.subject.unique():\n",
+    "    df_s=df_climax.loc[df_climax['subject']==S]\n",
+    "    for T in df_s.trick.unique():\n",
+    "        df_t = df_s.loc[df_s['trick']==T]\n",
+    "        df_count = df_t.groupby(['labels']).size().reset_index(name='count')\n",
+    "        df_count['subject']= S\n",
+    "        df_count['trick']= T\n",
+    "        df_count['event']='climax'\n",
+    "        frames_trick.append(df_count)\n",
+    "    \n",
+    "    \n",
+    "df__ = pd.concat(frames_trick)\n",
+    "df__.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.figure(figsize=(15,5))\n",
+    "\n",
+    "linares_plot(x='labels', y='count', order=df__.labels.unique(), \n",
+    "             hue='event', hue_order=['gag', 'climax'], \n",
+    "             df=df_, palette=['#285d9d', '#f55528'], \n",
+    "             CI=0.68,  fill_box=True, by_subj=True, subj_col='subject', \n",
+    "             reps=100, alpha_box=0.7, alpha=0.6,  point_size=3, leg=True, sep_axis=False)\n",
+    "\n",
+    "plt.gca().spines['right'].set_visible(False)  # aesthetics                                                                              # remove right spines\n",
+    "plt.gca().spines['top'].set_visible(False)                                                                                  # remove top spines\n",
+    "plt.gca().get_xaxis().tick_bottom()                                                                                         \n",
+    "plt.gca().get_yaxis().tick_left()\n",
+    "plt.gca().tick_params(direction='in') #direction\n",
+    "plt.xlabel('')\n",
+    "#plt.plot([-0.5,2.5], [0,0], 'k--', linewidth=2)\n",
+    "plt.ylabel('counts/subject')\n",
+    "#plt.gca().set_ylim(0,40)\n",
+    "#plt.gca().set_yticks([0,20,40])\n",
+    "plt.title('Spectators reactions');"
+   ]
   },
   {
    "cell_type": "code",
