--- a/process_df.ipynb
+++ b/process_df.ipynb
@@ -1625,10 +1625,255 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2108,\n",
+       " 2110,\n",
+       " 2112,\n",
+       " 2114,\n",
+       " 2116,\n",
+       " 2118,\n",
+       " 2120,\n",
+       " 2122,\n",
+       " 2124,\n",
+       " 2126,\n",
+       " 2128,\n",
+       " 2130,\n",
+       " 2132,\n",
+       " 2134,\n",
+       " 2136,\n",
+       " 2138,\n",
+       " 2140,\n",
+       " 2142,\n",
+       " 2144,\n",
+       " 2146,\n",
+       " 2148,\n",
+       " 2150,\n",
+       " 2152,\n",
+       " 2154,\n",
+       " 2156,\n",
+       " 2158,\n",
+       " 2160,\n",
+       " 2162,\n",
+       " 2164,\n",
+       " 2166,\n",
+       " 2168,\n",
+       " 2170,\n",
+       " 2172,\n",
+       " 2174,\n",
+       " 2176,\n",
+       " 2178,\n",
+       " 2180,\n",
+       " 2182,\n",
+       " 2184,\n",
+       " 2186,\n",
+       " 2188,\n",
+       " 2190,\n",
+       " 2192,\n",
+       " 2194,\n",
+       " 2196,\n",
+       " 2198,\n",
+       " 2200,\n",
+       " 2202,\n",
+       " 2204,\n",
+       " 2206,\n",
+       " 2208,\n",
+       " 2210,\n",
+       " 2212,\n",
+       " 2214,\n",
+       " 2216,\n",
+       " 2218,\n",
+       " 2220,\n",
+       " 2222,\n",
+       " 2224,\n",
+       " 2226,\n",
+       " 2228,\n",
+       " 2230,\n",
+       " 2232,\n",
+       " 2234,\n",
+       " 2236,\n",
+       " 2238,\n",
+       " 2240,\n",
+       " 2242,\n",
+       " 2244,\n",
+       " 2246,\n",
+       " 2248,\n",
+       " 2250,\n",
+       " 2252,\n",
+       " 2254,\n",
+       " 2256,\n",
+       " 2258,\n",
+       " 2260,\n",
+       " 2262,\n",
+       " 2264,\n",
+       " 2266,\n",
+       " 2268,\n",
+       " 2270,\n",
+       " 2272,\n",
+       " 2274,\n",
+       " 2276,\n",
+       " 2278,\n",
+       " 2280,\n",
+       " 2282,\n",
+       " 2284,\n",
+       " 2286,\n",
+       " 2288,\n",
+       " 2290,\n",
+       " 2292,\n",
+       " 2294,\n",
+       " 2296,\n",
+       " 2298,\n",
+       " 2300,\n",
+       " 2302,\n",
+       " 2304,\n",
+       " 2306,\n",
+       " 2308,\n",
+       " 2310,\n",
+       " 2312,\n",
+       " 2314,\n",
+       " 2316,\n",
+       " 2318,\n",
+       " 2320,\n",
+       " 2322,\n",
+       " 2324,\n",
+       " 2326,\n",
+       " 2328,\n",
+       " 2330,\n",
+       " 2332,\n",
+       " 2334,\n",
+       " 2336,\n",
+       " 2338,\n",
+       " 2340,\n",
+       " 2342,\n",
+       " 2344,\n",
+       " 2346,\n",
+       " 2348,\n",
+       " 2350,\n",
+       " 2352,\n",
+       " 2354,\n",
+       " 2356,\n",
+       " 2358,\n",
+       " 2360,\n",
+       " 2362,\n",
+       " 2364,\n",
+       " 2366,\n",
+       " 2368,\n",
+       " 2370,\n",
+       " 2372,\n",
+       " 2374,\n",
+       " 2376,\n",
+       " 2378,\n",
+       " 2380,\n",
+       " 2382,\n",
+       " 2384,\n",
+       " 2386,\n",
+       " 2388,\n",
+       " 2390,\n",
+       " 2392,\n",
+       " 2394,\n",
+       " 2396,\n",
+       " 2398,\n",
+       " 2400,\n",
+       " 2402,\n",
+       " 2404,\n",
+       " 2406,\n",
+       " 2408,\n",
+       " 2410,\n",
+       " 2412,\n",
+       " 2414,\n",
+       " 2416,\n",
+       " 2418,\n",
+       " 2420,\n",
+       " 2422,\n",
+       " 2424,\n",
+       " 2426,\n",
+       " 2428,\n",
+       " 2430,\n",
+       " 2432,\n",
+       " 2434,\n",
+       " 2436,\n",
+       " 2438,\n",
+       " 2440,\n",
+       " 2442,\n",
+       " 2444,\n",
+       " 2446,\n",
+       " 2448,\n",
+       " 2450,\n",
+       " 2452,\n",
+       " 2454,\n",
+       " 2456,\n",
+       " 2458,\n",
+       " 2460,\n",
+       " 2462,\n",
+       " 2464,\n",
+       " 2466,\n",
+       " 2468,\n",
+       " 2470,\n",
+       " 2472,\n",
+       " 2474,\n",
+       " 2476,\n",
+       " 2478,\n",
+       " 2480,\n",
+       " 2482,\n",
+       " 2484,\n",
+       " 2486,\n",
+       " 2488,\n",
+       " 2490,\n",
+       " 2492,\n",
+       " 2494,\n",
+       " 2496,\n",
+       " 2498,\n",
+       " 2500,\n",
+       " 2502]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(np.arange(tim_mi, tim_mx+2, 2) )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2214"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1_r.loc[t1_r['general_label']=='applause'].time_s.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from mlxtend.evaluate import permutation_test\n",
+    "\n",
+    "p_value = permutation_test(treatment, control,\n",
+    "                           method='approximate',\n",
+    "                           num_rounds=10000,\n",
+    "                           seed=0)\n",
+    "print(p_value)"
+   ]
   },
   {
    "cell_type": "code",
